Fixed Header & Footer Spacing & Added containers for lists
All Header & Footer spacing is fixed, and styling for amenities and floorplans pages are WIP.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,28 +20,30 @@ table {
 }
 
 section {
-	width: 50%;
+	width: 40%;
 	border-bottom: 2px solid grey;
 	display:flex;
 	margin-left: auto;
 	margin-right: auto;
 	text-align: center;
+	margin-top: 10px;
+}
+
+.fpsection {
+	border-bottom: 2px solid grey;
 }
 
 .fpheader {
 	font-size: 50px;
 	text-align: center;
 	text-decoration: underline;
-	display:flex;
-	margin-left: auto;
-	margin-right: auto;
 }
+
 .fpsubheader {
-	font-size: 25px;
+	font-size: 30px;
 	text-decoration: underline;
 	display:flex;
 }
-
 
 
 a.fplink {
@@ -91,17 +93,30 @@ a.fplink:hover {
 	justify-content: space-between;
 }
 
+.inlinerow {
+	font-size: 20px;
+	text-align: left;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+
 .inlineitem{
-	padding: 10px;
+	padding: 5px;
 	background-color: rgba(0,0,0,0.05);
 	border-radius: 5px;
 	border-style: solid;
 	border-color: rgba(0,0,0,0.2);
-	margin: 10px;
+	margin: 5px;
 	list-style-type: none;
+	font-size: 20px;
+	flex: 1;
 }
 
-.descripton{
-	font-size: 20px;
+.desc{
+	font-size: 25px;
+	padding-bottom: 10px;
+	display:flex;
 }
 
